<resources>
    <string name="app_name">Village</string>

    <!--icon-font-->
    <string name="icon_search">&#xe647;</string>
    <string name="ic_wx">&#xe754;</string>
    <string name="ic_qq">&#xe664;</string>
    <string name="ic_df_avatar">&#xe658;</string>
    <string name="ic_phone">&#xe672;</string>
    <string name="ic_pass">&#xe64b;</string>
    <string name="ic_eye">&#xe614;</string>
    <string name="ic_code">&#xe669;</string>
    <string name="ic_location">&#xe613;</string>
    <string name="ic_back">&#xe747;</string>
    <string name="ic_arrow_right">&#xe62a;</string>
    <string name="ic_publish">&#xe622;</string>
    <string name="ic_label">&#xe610;</string>
    <string name="ic_share">&#xe645;</string>
    <string name="ic_collect">&#xe6da;</string>
    <string name="ic_follow">&#xe632;</string>
    <string name="ic_time_clock">&#xe62c;</string>

    <!--微信-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <!--system-->
    <string name="publish">发布</string>
    <string name="cancel">取消</string>
    <string name="share_new_things">分享新鲜事</string>
    <string name="internal_storage">内部存储</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <!--other-->
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
</resources>
