<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhiteSmoke">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorDarkBlack" />

        <TextView
            android:id="@+id/tv_publish"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/publish"
            android:textColor="@color/colorGray" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_publish_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/share_new_things"
            android:padding="5dp"
            android:textColor="@color/colorDarkBlack"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text12" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <RelativeLayout
        android:id="@+id/rl_choose_label_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhiteSmoke"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="选择标签"
            android:textColor="@color/colorDarkBlack"
            android:textSize="@dimen/text12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_label_arrow"
            android:gravity="center_vertical"
            android:text="车"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/text14" />

        <ImageView
            android:id="@+id/iv_label_arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_arrow_right" />

    </RelativeLayout>


</LinearLayout>