<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:text="登录"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text20" />

        <!--<ImageButton-->
        <!--android:layout_width="25dp"-->
        <!--android:layout_height="25dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:background="@mipmap/ic_back_white" />-->

        <ink.alf.village.widget.IconfontTextView
            android:id="@+id/it_back_login"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/ic_back"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text20" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="注册"
            android:textColor="@drawable/text_state_selector"
            android:textSize="@dimen/text16" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#50dbdbdb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@color/colorGray"
            android:gravity="center"
            android:text="LOGO" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">

        <ink.alf.village.widget.IconfontTextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/ic_phone"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text18" />

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:background="@color/colorWhite" />

        <EditText
            android:id="@+id/et_user_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="用户手机号"
            android:inputType="phone"
            android:textColor="@color/colorWhite"
            android:textColorHint="#50dbdbdb"
            android:textSize="@dimen/text14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="#50dbdbdb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">

        <ink.alf.village.widget.IconfontTextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/ic_pass"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text18" />

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:background="@color/colorWhite" />

        <EditText
            android:id="@+id/et_user_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="密码"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="#50dbdbdb"
            android:textSize="@dimen/text14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="#50dbdbdb" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorWhite"
        android:text="登录"
        android:textColor="@drawable/button_state_selector"
        android:textSize="@dimen/text16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@color/colorWhite"
                android:gravity="start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="第三方登录"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text12" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@color/colorWhite"
                android:gravity="end" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ink.alf.village.widget.IconfontTextView
                android:id="@+id/it_wx_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/ic_wx"
                android:textColor="@drawable/ic_wx_selector"
                android:textSize="@dimen/text22" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>